force-app/main/default/objects/Twilio_Account__c/Twilio_Account__c.object-meta.xml
<CustomObject>
    <label>Twilio Account</label>
    <nameField>
        <label>Twilio Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Twilio Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>