force-app/main/default/objects/Twilio_Account__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <label>API Key</label>
    <length>34</length>
    <type>Text</type>
</CustomField>