force-app/main/default/objects/Twilio_Account__c/fields/Secret__c.field-meta.xml
<CustomField>
    <fullName>Secret__c</fullName>
    <label>Secret</label>
    <length>32</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>